Fix for facebook label overlap with fb button in My Profilewq

--- a/web-app/css/auth.css
+++ b/web-app/css/auth.css
@@ -78,7 +78,8 @@ input+.external_bttn, .external_bttn {
 
 .fbJustConnect {
 	opacity: 0;
-    filter: alpha(opacity = 0);         
+ 	filter: alpha(opacity = 0);         
+	float: right; /*IE hack*/
 }
 
 .facebookButton {
